--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 </head>
 
 <body>
-    <nav>
-        <div class="logo">
-            <img src="img/logo.svg" alt="">
-        </div>
-        <button class="hide">&#9776;</button>
-        <ul>
+    <header id="header">
+    <a id="logo" href=""><img src="img/logo.svg" alt=" "></a>
+    <nav id="nav"> <!--meu menu-->
+        <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-activedescendant="false">Menu
+            <span id="hamburger"></span>
+           </button> <!--botão hamburgue-->
+        <ul id="menu" role="menu">
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Buscar</button>
@@ -41,14 +42,13 @@
             </li>
         </ul>
     </nav>
-
-    <div class="banner">
+    </header> <!--final do menu-->
+    <div class="banner"> <!--meu banner-->
         <img src="img/banner.png" class="img-fluid" alt="logo do banner">
-
     </div>
+     <!--sessão novidades -->
     <div class="barra1">
         <h1>Novidades</h1>
-
     </div>
     <section class="novidades">
         <div>
@@ -163,6 +163,7 @@
             </div>
         </div>
     </section>
+    <!--inicio footer roda pé-->
     <footer>
         <div class="main-content">
             <div class="left box">
@@ -229,7 +230,26 @@
                 <span class="far fa-copyright">2021 Todos os direitos reservados</span>
             </div>
         </div>
-    </footer>
-</body>
+    </footer> <!--final footer roda pé-->
+    <!-- javascript menu-->
+    <script>
+        const btnMobile = document.getElementById('btn-mobile');
 
+        function toggleMenu(event) {
+            if(event.type === 'touchstart') event.preventDefault()
+            const nav = document.getElementById('nav');
+            nav.classList.toggle('active');
+            const active = nav.classList.contains('active');
+            event.currentTarget.setAttribute('aria-expanded', active);
+             if (active) {
+              event.currentTarget.setAttribute('aria-label', 'Fechar Menu');
+            } else {
+                event.currentTarget.setAttribute('aria-label', 'Abrir Menu');
+            }
+        }
+
+        btnMobile.addEventListener('click', toggleMenu);
+        btnMobile.addEventListener('touchstart', toggleMenu);
+    </script>
+</body>
 </html>
