--- a/login.html
+++ b/login.html
@@ -13,11 +13,10 @@
 </head>
 
 <body class="plano-1">
-    <nav>
-        <div class="logo">
-            <a href="index.html"><img src="img/logo.svg" alt=""></a>
-        </div>
-    </nav>
+    <header id="header">
+        <a id="logo" href="index.html"><img src="img/logo.svg" alt=""></a>
+
+    </header>
     <div class="tela-login">
         <h1 class="nome-login">Login</h1>
         <input class="logi-nome" type="text" placeholder="Nome">
