--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
 <body class="plano-1">
     <header id="header">
-        <a id="logo" href="index.html"><img src="img/logo.svg" alt=""></a>
+        <a id="logo" href="index.html"><img src="img/logo.png" alt=""></a>
 
     </header>
     <div class="tela-login">
