--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    
 </head>
 
 <body>
     <header id="header">
-    <a id="logo" href=""><img src="img/logo.svg" alt=" "></a>
+    <a id="logo" href=""><img src="img/logo.png" alt=" "></a>
     <nav id="nav"> <!--meu menu-->
-        <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-activedescendant="false">Menu
+        <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-activedescendant="false">
             <span id="hamburger"></span>
            </button> <!--botão hamburgue-->
         <ul id="menu" role="menu">
-            <form class="d-flex">
+            <form  class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Buscar</button>
             </form>
@@ -52,7 +52,7 @@
     </div>
     <section class="novidades">
         <div>
-            <img src="img/fifa22.jfif" alt=" ">
+            <img src="img/fifa22.png" alt=" ">
             <a href="#">
                 <p>Fifa 22</p>
             </a>
