--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="plano-1">
-    <header id="header">
+   <header id="login-header">
         <a id="logo" href="index.html"><img src="img/logo.png" alt=""></a>
 
     </header>
@@ -28,10 +28,10 @@
             <p class="cadastrar">Cadastre-se</p>
         </a>
     </div>
-
+    <br><br>
+    <br><br>
     <!--meu roda pé-->
-
-    <footer class="login-footer">
+    <footer class="footer-login">
         <div class="main-content">
             <div class="left box">
                 <h2>sobre nós</h2>
@@ -97,7 +97,8 @@
                 <span class="far fa-copyright">2021 Todos os direitos reservados</span>
             </div>
         </div>
-    </footer>
+    </foote>
+    
 </body>
 
 </html>
