--- a/galeria.html
+++ b/galeria.html
@@ -117,14 +117,14 @@
                     <form action="#">
                         <div class="email">
                             <div class="text">Email *</div>
-                            <input type="email" required>
+                            <input id="campo-email" type="email" required>
                         </div>
                         <div class="msg">
                             <div class="text">Mensagem *</div>
-                            <textarea rows="2" cols="25" required></textarea>
+                            <textarea input id="campo-mensagem" type="mensagen" rows="2" cols="25" required></textarea>
                         </div>
                         <div class="btn-2">
-                            <button type="submit">Enviar</button>
+                            <button onclick="enviarEmail() ,enviarMensagem()">Enviar</button>
                         </div>
                     </form>
                 </div>
@@ -138,24 +138,7 @@
             </div>
         </div>
     </footer>
-    <script>
-        const btnMobile = document.getElementById('btn-mobile');
-
-        function toggleMenu(event) {
-            if(event.type === 'touchstart') event.preventDefault()
-            const nav = document.getElementById('nav');
-            nav.classList.toggle('active');
-            const active = nav.classList.contains('active');
-            event.currentTarget.setAttribute('aria-expanded', active);
-             if (active) {
-              event.currentTarget.setAttribute('aria-label', 'Fechar Menu');
-            } else {
-                event.currentTarget.setAttribute('aria-label', 'Abrir Menu');
-            }
-        }
-
-        btnMobile.addEventListener('click', toggleMenu);
-        btnMobile.addEventListener('touchstart', toggleMenu);
-    </script>
+    
+     <script src="js/script.js"></script>
 </body>
 </html>
