--- a/galeria.html
+++ b/galeria.html
@@ -24,6 +24,9 @@
                     <button class="btn btn-outline-success" type="submit">Buscar</button>
                 </form>
                 <li>
+                    <a class="menu" href="index.html">Home</a>
+                </li>
+                <li>
                     <a  class="menu" href="jogos.html">Jogos</a>
                 </li>
                 <li>
@@ -47,7 +50,7 @@
 
     <section class="galeria"> <!--sessão de imagens galeria-->
         <div class="ft">
-            <img src="img/img1 1.png" alt="">
+            <img class="gl" src="img/img1 1.png" alt="">
             
         </div>
         <div class="ft">
