--- a/jogos.html
+++ b/jogos.html
@@ -24,6 +24,9 @@
                     <button class="btn btn-outline-success" type="submit">Buscar</button>
                 </form>
                 <li>
+                    <a class="menu" href="index.html">Home</a>
+                </li>
+                <li>
                     <a  class="menu" href="jogos.html">Jogos</a>
                 </li>
                 <li>
@@ -42,7 +45,7 @@
         </nav>
     </header>
     <div class="banner-2">
-        <img src="img/banner3.png" class="img-fluid" alt="logo do banner">
+        <img src="img/banner2.png" class="img-fluid" alt="logo do banner">
     </div> 
     <!--sessão jogos ps5-->
     <h1 class="ps5">PLAYSTATION 5</h1>
