--- a/pcgames.html
+++ b/pcgames.html
@@ -24,6 +24,9 @@
                     <button class="btn btn-outline-success" type="submit">Buscar</button>
                 </form>
                 <li>
+                    <a class="menu" href="index.html">Home</a>
+                </li>
+                <li>
                     <a  class="menu" href="jogos.html">Jogos</a>
                 </li>
                 <li>
@@ -44,7 +47,7 @@
     </header>
     <!--sessão pc-games 1-->
     <div class="banner-3">
-        <img src="img/pc.png" class="img-fluid" alt="logo do banner">
+        <img src="img/banner3.png" class="img-fluid" alt="logo do banner">
     </div> 
     <h4 class="pc">PC GAMES / VARIEDADES</h4>
     <section class="pc-games1">
