--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
 <body class="plano-1">
    <header id="login-header">
-        <a id="logo" href="index.html"><img src="img/logo.png" alt=""></a>
+        <a class="login-logo" id="logo" href="index.html"><img src="img/logo.png" alt=""></a>
 
     </header>
     <div class="tela-login">
@@ -31,73 +31,7 @@
     <br><br>
     <br><br>
     <!--meu roda pé-->
-    <footer class="footer-login">
-        <div class="main-content">
-            <div class="left box">
-                <h2>sobre nós</h2>
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, facilis, tenetur dolore
-                        architecto unde veniam non iste temporibus laudantium esse sit asperiores ipsa eaque corrupti
-                        quibusdam dolorem, error inventore. Dolor?</p>
-
-                    <div class="social">
-                        <a href="#"><img src="img/facebook-brands.svg" alt=" "></a>
-                        <a href="#"><img src="img/twitter-brands.svg" alt=" "></a>
-                        <a href="#"><img src="img/instagram-brands.svg" alt=" "></a>
-                        <a href="#"><img src="img/youtube-brands.svg" alt=" "></a>
-                    </div>
-                </div>
-            </div>
-            <!--left box-->
-            <div class="center box">
-                <h2>Endereço</h2>
-                <div class="content">
-                    <div class="place">
-                        <a href="#"><img src="img/map-marker-solid.svg" alt=" "></a>
-                        <span class="text">Rua São bento,Centro SP</span>
-                    </div>
-
-                    <div class="phone">
-                        <a href="#"><img src="img/phone-alt-solid.svg" alt=" "></a>
-                        <span class="text">+55 11 00000000</span>
-                    </div>
-
-
-                    <div class="email">
-                        <a href="#"><img src="img/envelope-solid.svg" alt=" "></a>
-                        <span class="text">exemplo@exemplo.com</span>
-                    </div>
-
-                </div>
-
-            </div>
-            <div class="right box">
-                <h2>Contato</h2>
-                <div class="content">
-                    <form action="#">
-                        <div class="email">
-                            <div class="text">Email *</div>
-                            <input id="campo-email" type="email" required>
-                        </div>
-                        <div class="msg">
-                            <div class="text">Mensagem *</div>
-                            <textarea input id="campo-mensagem" type="mensagen" rows="2" cols="25" required></textarea>
-                        </div>
-                        <div class="btn-2">
-                            <button onclick="enviarEmail() ,enviarMensagem()">Enviar</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-        <!--main-content-->
-        <div class="bottom">
-            <div class="center">
-                <span class="credit">Criado por <a href="#">FRONT</a></span>
-                <span class="far fa-copyright">2021 Todos os direitos reservados</span>
-            </div>
-        </div>
-    </foote>
+  
     <script src="js/script.js"></script>
 </body>
 
