--- a/index.html
+++ b/index.html
@@ -45,21 +45,25 @@
                     <a class="menu" href="login.html"><img src="img/entrar 1.png" alt=" "></a>
                 </li>
                 <li>
-                    <a class="menu" href="index.html"><img src="img/carrinho 3.png" alt=" "></a>
+                    <a class="menu" href="index.html"><img src="img/carrinho 3.png " alt=" ">
+                        <span id="marcador" 
+                        style="font-size: 12px; color: black; display: flex; margin-top: -40px; margin-left: 15px;">
+                        0</span>
+                    </a>
                 </li>
             </ul>
         </nav>
     </header>
     <!--final do menu-->
     <!--meu banner-->
-   <!--- <div class="banner">
+    <div class="banner">
         <img src="img/banner.png" class="img-fluid" alt="logo do banner">
-    </div>-->
-    <div id="carrossel" class="carrossel">
+    </div>
+   <!-- <div id="carrossel" class="carrossel">
          <img  src="img/banner.png" alt="Banner do ps4">
          <img src="img/banner2.png" alt="Banner do ps5">
          <img src="img/banner3.png" alt="Banner do pcgames">
-    </div> 
+    </div> -->
     
     <!--sessão novidades -->
     <div class="barra1">
@@ -73,14 +77,14 @@
             </a>
             <a class="valor" href="#"> R$ 300</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+              <a href="#">  <button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+               <a href="#"><button onclick="contarProdutos()" type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div>
@@ -90,14 +94,14 @@
             </a>
             <a class="valor" href="#">R$ 4.500</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+              <a href="#">  <button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+               <a href="#"><button onclick="contarProdutos()"  type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div>
@@ -107,14 +111,14 @@
             </a>
             <a class="valor" href="#"> R$ 5.999</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+               <a href="#"> <button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()"  type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
     </section>
@@ -130,14 +134,14 @@
             </a>
             <a class="valor" href="#">R$200</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+               <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()"  type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div>
@@ -147,15 +151,14 @@
             </a>
             <a class="valor" href="#">R$ 2.500</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
-                    comprar
-                </button>
+                <a href="#"> <button type="button" class="btn btn-outline-primary click">
+                comprar
+            </button></a>
             </div>
             <div class="botoões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()"  type="button" class="btn btn-outline-primary click">
                     adicionar
-
-                </button>
+                </button></a>
 
             </div>
         </div>
@@ -166,15 +169,15 @@
             </a>
             <a class="valor" href="#">R$689</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()"  type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
 
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()"  type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
     </section>
