--- a/jogos.html
+++ b/jogos.html
@@ -39,7 +39,11 @@
                     <a class="menu" href="login.html"><img src="img/entrar 1.png" alt=" "></a>
                 </li>
                 <li>
-                    <a class="menu" href="index.html"><img src="img/carrinho 3.png" alt=" "></a>
+                    <a class="menu" href="index.html"><img src="img/carrinho 3.png" alt=" ">
+                        <span id="marcador" 
+                        style="font-size: 12px; color: black; display: flex; margin-top: -40px; margin-left: 15px;">
+                        0</span>
+                    </a>
                 </li>
             </ul>
         </nav>
@@ -56,15 +60,14 @@
            <a href="#"><p>Returnal PS5</p></a>
            <a class="valor" href="#">R$251,25</a>
            <div class="botões">
-            <button type="button" class="btn btn-outline-primary click">
+        <a href="#"><button type="button" class="btn btn-outline-primary click">
                 comprar
-            </button>
+            </button></a>
         </div>
         <div class="botoões">
-            <button type="button" class="btn btn-outline-primary click">
+            <a href="#"><button onclick="contarProdutos()"  type="button" class="btn btn-outline-primary click">
                 adicionar
-
-            </button>
+            </button></a>
 
         </div>
        </div>
@@ -74,15 +77,14 @@
            <a href="#"><p>Village Ps5</p></a>
            <a class="valor" href="#">R$149,99</a>
            <div class="botões">
-            <button type="button" class="btn btn-outline-primary click">
+            <a href="#"><button type="button" class="btn btn-outline-primary click">
                 comprar
-            </button>
+            </button></a>
         </div>
         <div class="botoões">
-            <button type="button" class="btn btn-outline-primary click">
+            <a href="#"><button onclick="contarProdutos()"  type="button" class="btn btn-outline-primary click">
                 adicionar
-
-            </button>
+            </button></a>
 
         </div>
        </div>
@@ -92,15 +94,14 @@
            <a href="#"><p>Gran Turismo 7 - ps5</p></a>
            <a class="valor" href="#">R$ 290,31</a>
            <div class="botões">
-            <button type="button" class="btn btn-outline-primary click">
+            <a href="#"><button onclick="contarProdutos()"  type="button" class="btn btn-outline-primary click">
                 comprar
-            </button>
+            </button></a>
         </div>
         <div class="botoões">
-            <button type="button" class="btn btn-outline-primary click">
+            <a href="#"><button onclick="contarProdutos()"  type="button" class="btn btn-outline-primary click">
                 adicionar
-
-            </button>
+            </button></a>
 
         </div>
        </div>
@@ -110,15 +111,14 @@
            <a href="#"><p> Spider-Man - ps5</p></a>
            <a class="valor" href="#">R$ 179,90</a>
            <div class="botões">
-            <button type="button" class="btn btn-outline-primary click">
+            <a href="#"><button type="button" class="btn btn-outline-primary click">
                 comprar
-            </button>
+            </button></a>
         </div>
         <div class="botoões">
-            <button type="button" class="btn btn-outline-primary click">
+            <a href="#"><button onclick="contarProdutos()"  type="button" class="btn btn-outline-primary click">
                 adicionar
-
-            </button>
+            </button></a>
 
         </div>
        </div>
@@ -128,14 +128,14 @@
            <a href="#"><p>NBA 2K21 - ps5</p></a>
            <a class="valor" href="#">R$ 189,90</a>
            <div class="botões">
-            <button type="button" class="btn btn-outline-primary click">
+            <a href="#"><button type="button" class="btn btn-outline-primary click">
                 comprar
-            </button>
+            </button></a>
         </div>
         <div class="botoões">
-            <button type="button" class="btn btn-outline-primary click">
+            <a href="#"><button onclick="contarProdutos()"  type="button" class="btn btn-outline-primary click">
                 adicionar
-            </button>
+            </button></a>
         </div>
        </div>
     </section>
@@ -149,14 +149,14 @@
             <a href="#"><p>Fortnite-ps4</p></a>
             <a class="valor" href="#">R$ 179,10</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botoões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()"  type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-ps4">
@@ -164,14 +164,14 @@
             <a href="#"><p>A Way Out - Ps4</p></a>
             <a class="valor" href="#">R$ 78,00</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botoões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()"  type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-ps4">
@@ -179,14 +179,14 @@
             <a href="#"><p>Call Of Duty  Ps4</p></a>
             <a class="valor" href="#">R$ 189,90</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botoões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()"  type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-ps4">
@@ -194,14 +194,14 @@
             <a href="#"><p>Spider-man  Ps4</p></a>
             <a class="valor" href="#">R$ 139,00</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button   type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botoões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"> <button onclick="contarProdutos()"  type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
 
         </div>
@@ -210,14 +210,14 @@
             <a href="#"><p>Ghost Of Tsushima</p></a>
             <a class="valor" href="#">R$ 178,45</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botoões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()"  type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
     </section>
@@ -232,14 +232,14 @@
             <a href=""><p>The Witcher 3</p></a>
             <a class="valor" href="#">R$ 104,094</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botoões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-xbox">
@@ -247,14 +247,14 @@
             <a href=""><p>Spider-man 2</p></a>
             <a class="valor" href="#">R$ 142,99</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botoões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-xbox">
@@ -262,14 +262,14 @@
             <a href=""><p>Gears of War 4</p></a>
             <a class="valor" href="#">R$ 149,89</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botoões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-xbox">
@@ -277,14 +277,14 @@
             <a href=""><p>Fifa 22</p></a>
             <a class="valor" href="#">R$ 239,90</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botoões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-xbox">
@@ -292,17 +292,18 @@
             <a href=""><p>Dead Rising 3</p></a>
             <a class="valor" href="#">R$ 149,89</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botoões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
     </section>
+    <!--inicio do footer roda pé-->
     <footer>
         <div class="main-content">
             <div class="left box">
