--- a/pcgames.html
+++ b/pcgames.html
@@ -39,7 +39,11 @@
                     <a class="menu" href="login.html"><img src="img/entrar 1.png" alt=" "></a>
                 </li>
                 <li>
-                    <a class="menu" href="index.html"><img src="img/carrinho 3.png" alt=" "></a>
+                    <a class="menu" href="index.html"><img src="img/carrinho 3.png" alt=" ">
+                        <span id="marcador" 
+                        style="font-size: 12px; color: black; display: flex; margin-top: -40px; margin-left: 15px;">
+                        0</span>
+                    </a>
                 </li>
             </ul>
         </nav>
@@ -56,14 +60,14 @@
             <a href="#"><p>Combo Gamer-Evolut</p></a>
             <a class="valor" href="#">R$ 269,90</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+               <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+               <a href="#"><button onclick="contarProdutos()" type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-pc">
@@ -71,14 +75,14 @@
             <a href="#"><p>Mousepad Gamer </p></a>
             <a class="valor" href="#">R$ 134,90</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+               <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+              <a href="#"><button onclick="contarProdutos()" type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-pc">
@@ -86,14 +90,14 @@
             <a href="#"><p>Mouse Xgamer Fire</p></a>
             <a class="valor" href="#">R$ 67,50</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()" type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-pc">
@@ -101,14 +105,14 @@
             <a href="#"><p>Cadeira Gamer</p></a>
             <a class="valor" href="#">R$ 1.125,00</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()" type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-pc">
@@ -116,14 +120,14 @@
             <a href="#"><p>Headset  K18 </p></a>
             <a class="valor" href="#">R$ 179,90</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()" type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
     </section>
@@ -136,14 +140,14 @@
             <a href="#"><p>Mouse Gamer 6200dpi</p></a>
             <a class="valor" href="#">R$ 225,00</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button  type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()" type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-pc">
@@ -151,14 +155,14 @@
             <a href="#"><p>Teclado Gamer </p></a>
             <a class="valor" href="#">R$ 340,00</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()" type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-pc">
@@ -166,28 +170,28 @@
             <a href="#"><p>Placa De Video </p></a>
             <a class="valor" href="#">R$ 7.856,64</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()" type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-pc">
             <img class="img-pc" src="img/cpu-gamer.png" alt="">
             <a href="#"><p>Gabinete Gamer</p></a>
             <a class="valor" href="#">R$ 269,90</a><div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()" type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-pc">
@@ -195,14 +199,14 @@
             <a href="#"><p>Headset Gamer</p></a>
             <a class="valor" href="#">R$ 225,00</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()" type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
     </section>
@@ -214,14 +218,14 @@
             <a href="#"><p>computador</p></a>
             <a class="valor" href="#">R$ 2.500</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()" type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-pc">
@@ -229,14 +233,14 @@
             <a href="#"><p>Mouse Pad Mp-602</p></a>
             <a class="valor" href="#">R$ 161,90</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()" type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-pc">
@@ -244,14 +248,14 @@
             <a href="#"><p>Mouse Gamer + M.Pad</p></a>
             <a class="valor" href="#">R$ 71,90</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()" type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-pc">
@@ -259,14 +263,14 @@
             <a href="#"><p>Cadeira Gamer Mx1</p></a>
             <a class="valor" href="#">R$ 809,90</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()" type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
         <div class="sessão-pc">
@@ -274,14 +278,14 @@
             <a href="#"><p>Headset Gamer K20</p></a>
             <a class="valor" href="#">R$ 269,900</a>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button type="button" class="btn btn-outline-primary click">
                     comprar
-                </button>
+                </button></a>
             </div>
             <div class="botões">
-                <button type="button" class="btn btn-outline-primary click">
+                <a href="#"><button onclick="contarProdutos()" type="button" class="btn btn-outline-primary click">
                     adicionar
-                </button>
+                </button></a>
             </div>
         </div>
     </section> 
